J'ai renseigné les h1, h2,...

--- a/mon site/index.html
+++ b/mon site/index.html
@@ -1,10 +1,27 @@
+<doc type html>
 <html>
 <body vlink=green>
-<font color=gold size=12 face=arial><b>Le CV de Jean Patouz</b></font>
+
+<font color=gold size=12 face=arial><b>CV Etienne Ster</b></font>
 <br>
 <font size=10>
-	<a href="http://www.doyoubuzz.com/etienne-ster">Cliquez pour d&eacutecouvrir mon CV</a>
+	<a href="http://www.doyoubuzz.com/etienne-ster"><center>Cliquez pour d&eacutecouvrir mon CV</center></a>
 	</font>
 <br>
+<h1>Formation</h1>
+<div id="formation">
+<br>
+<h2>
+	2010-2012 : Celsa - Paris Sorbonne / Licence puis Master Information-Communication
+<br>
+2007-2009 : DUT Information-Communication
+</h2>
+</h div>
+
+<br>
+<br>
+<h1>Exp&eacuteriences professionnelles</h1>
+<br>
+Mars-août : 2011 Assistant Chef de projet / IMPLICOM, agence du groupe Aegis Média
 </body>
 </html>
