J'ai créé "moncss.css" mais qu'y mettre ?

--- a/mon site/index.html
+++ b/mon site/index.html
@@ -1,5 +1,8 @@
-<doc type html>
+<!DOCTYPE html>
 <html>
+<head>
+<title>CV d'Etienne Ster</title>
+</head>
 <body vlink=green>
 
 <font color=gold size=12 face=arial><b>CV Etienne Ster</b></font>
@@ -22,6 +25,16 @@
 <br>
 <h1>Exp&eacuteriences professionnelles</h1>
 <br>
+<h2>
 Mars-août : 2011 Assistant Chef de projet / IMPLICOM, agence du groupe Aegis Média
+<br>
+2009-2010 : Entraineur de handball en Angleterre et b&eacuten&eacutevole pour la British Handball Association
+<h2>
+<br>
+<br>
+<h1>Centres d'int&eacuterêts</h1>
+<br>
+<h2>
+Sport, lecture et voyages
 </body>
 </html>
