--- a/mon site/index.html
+++ b/mon site/index.html
@@ -2,39 +2,60 @@
 <html>
 <head>
 <title>CV d'Etienne Ster</title>
+<link href="public/css/moncss.css" media="screen" rel="stylesheet" type="text/css">
+<meta http-equiv="content-Type" content="text/html; charset=UTF-8 />"
 </head>
-<body vlink=green>
+<body bgcolor="#1A1D26">
 
-<font color=gold size=12 face=arial><b>CV Etienne Ster</b></font>
+
+  <h1><font color="#FFFFFF">
+  	Etienne Ster</font>
+  <br><font color="#B83A1B">MISC 13</font></h1>
+</div>
+
+<div class="main-bloc">
+  <h2>FORMATION</h2>
+
+<h3>
+	2012-2013 : Celsa - Paris Sorbonne / Master 2 MISC Médias informatisés et stratégies de communication
+	<br>
+	2010-2012 : Celsa - Paris Sorbonne / Licence puis Master 1 Information-Communication
+    <br>
+    2007-2009 : DUT Information-Communication
+</h3>
+
+
 <br>
-<font size=10>
+
+  <h2>Exp&eacuteriences professionnelles</h2>
+
+    <h3>
+    Mars-août : 2011 Assistant Chef de projet / IMPLICOM, agence du groupe Aegis Média
+    <br>
+    2009-2010 : Entraineur de handball en Angleterre et b&eacuten&eacutevole pour la British Handball Association
+    <h3>
+    <br>
+  <h2>Langues parlées</h2>
+    <h3>
+    Anglais : courant
+    <br>
+    Allemand : très bon	
+    </h3>
+
+  <h2>Centres d'int&eacuterêts</h2>
+   <h3>
+   Sport, lecture et voyages
+   </h3>
+</div>
+
+<br>
+<br>
+<font size=5>
 	<a href="http://www.doyoubuzz.com/etienne-ster"><center>Cliquez pour d&eacutecouvrir mon CV</center></a>
 	</font>
-<br>
-<h1>Formation</h1>
-<div id="formation">
-<br>
-<h2>
-	2010-2012 : Celsa - Paris Sorbonne / Licence puis Master Information-Communication
-<br>
-2007-2009 : DUT Information-Communication
-</h2>
-</h div>
 
-<br>
-<br>
-<h1>Exp&eacuteriences professionnelles</h1>
-<br>
-<h2>
-Mars-août : 2011 Assistant Chef de projet / IMPLICOM, agence du groupe Aegis Média
-<br>
-2009-2010 : Entraineur de handball en Angleterre et b&eacuten&eacutevole pour la British Handball Association
-<h2>
-<br>
-<br>
-<h1>Centres d'int&eacuterêts</h1>
-<br>
-<h2>
-Sport, lecture et voyages
+<script src="public/scripts/jquery-1.8.2.js"></script>
+<script src="public/scripts/app.js"></script>
+
 </body>
 </html>
